coder/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.cgraaaj.in`)
      kind: Rule
      services:
        - name: coder
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: coder-cgraaaj-in-tls
